--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -74,7 +74,8 @@
   vertical-align: top;
   width: 36px;
   // set width only, for non-square avatars
-  // height: 36px;
+  height: 36px;
+  overflow: hidden;
 
   @include breakpoint($large) {
     display: block;
