--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -9,6 +9,7 @@
 .sidebar {
   -webkit-transform: translate3d(0, 0 , 0);
           transform: translate3d(0, 0 , 0);
+   background-color: #333;
 
   @include clearfix();
   margin-bottom: 1em;
@@ -73,8 +74,8 @@
   display: table-cell;
   vertical-align: top;
   width: 36px;
-  // set width only, for non-square avatars
   height: 36px;
+  border-radius: 50%;
   overflow: hidden;
 
   @include breakpoint($large) {
@@ -85,7 +86,7 @@
 
   img {
     max-width: 175px;
-    border-radius: 50%;
+    
 
     @include breakpoint($large) {
       padding: 5px;
@@ -100,6 +101,7 @@
   padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
+   background-color: #333;
 
   @include breakpoint($large) {
     display: block;
