--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -74,31 +74,16 @@
   display: table-cell;
   vertical-align: top;
   width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  overflow: hidden;
+  height: 36px; /* Set the height to match the width for a square shape */
+  text-align: center; /* Center the circular image */
+}
 
-  @include breakpoint($large) {
-    display: block;
-    width: auto;
-    height: auto;
-  }
-   .author__avatar img {
+.author__avatar img {
   max-width: 100%; /* Ensure the image doesn't exceed the container */
   max-height: 100%; /* Ensure the image doesn't exceed the container */
   width: auto; /* Allow the width to adjust based on the aspect ratio */
   height: auto; /* Allow the height to adjust based on the aspect ratio */
   border-radius: 50%; /* Make the image circular */
-}
-
- 
-    
-
-    @include breakpoint($large) {
-      padding: 5px;
-      border: 1px solid $border-color;
-    }
-  }
 }
 
 .author__content {
@@ -107,7 +92,6 @@
   padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
-   background-color: #333;
 
   @include breakpoint($large) {
     display: block;
