--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -76,14 +76,15 @@
   width: 36px;
   height: 36px; /* Set the height to match the width for a square shape */
   text-align: center; /* Center the circular image */
+  overflow: hidden;
 }
 
-.author__avatar img {
-  max-width: 100%; /* Ensure the image doesn't exceed the container */
-  max-height: 100%; /* Ensure the image doesn't exceed the container */
-  width: auto; /* Allow the width to adjust based on the aspect ratio */
-  height: auto; /* Allow the height to adjust based on the aspect ratio */
-  border-radius: 50%; /* Make the image circular */
+  img {
+     max-width: 100%; /* Ensure the image doesn't exceed the container */
+     max-height: 100%; /* Ensure the image doesn't exceed the container */
+     width: auto; /* Allow the width to adjust based on the aspect ratio */
+     height: auto; /* Allow the height to adjust based on the aspect ratio */
+     
 }
 
 .author__content {
