--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -73,8 +73,8 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 36px;
-  height: 36px; /* Set the height to match the width for a square shape */
+  width: 100px;
+  height: 100px; /* Set the height to match the width for a square shape */
   text-align: center; /* Center the circular image */
   overflow: hidden;
 }
@@ -84,6 +84,7 @@
      max-height: 100%; /* Ensure the image doesn't exceed the container */
      width: auto; /* Allow the width to adjust based on the aspect ratio */
      height: auto; /* Allow the height to adjust based on the aspect ratio */
+      object-fit: cover;
      
 }
 
