--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -10,6 +10,7 @@
   -webkit-transform: translate3d(0, 0 , 0);
           transform: translate3d(0, 0 , 0);
    background-color: #333;
+   color: white;
 
   @include clearfix();
   margin-bottom: 1em;
@@ -73,8 +74,8 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 100px;
-  height: 100px; /* Set the height to match the width for a square shape */
+  width: 250px;
+  height: 250px; /* Set the height to match the width for a square shape */
   text-align: center; /* Center the circular image */
   overflow: hidden;
 }
@@ -113,11 +114,13 @@
 }
 .sidebar .author__name {
   font-family: $sans-serif;
+color: white;
   font-size: $type-size-5;
 }
 
 .author__bio {
   margin: 0;
+   color: white;
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -130,6 +133,7 @@
   display: table-cell;
   vertical-align: middle;
   font-family: $sans-serif;
+   color: white;
   z-index: 10;
   position: relative;
   cursor: pointer;
@@ -221,7 +225,7 @@
     padding-right: 5px;
     padding-top: 2px;
     padding-bottom: 2px;
-    color: inherit;
+    color: white;
     font-size: $type-size-5;
     text-decoration: none;
 
