--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -10,7 +10,8 @@
   -webkit-transform: translate3d(0, 0 , 0);
           transform: translate3d(0, 0 , 0);
    background-color: #333;
-   color: white;
+   text-align: center; 
+   
 
   @include clearfix();
   margin-bottom: 1em;
@@ -95,6 +96,7 @@
   padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
+   padding-top: 30px
 
   @include breakpoint($large) {
     display: block;
@@ -133,7 +135,7 @@ color: white;
   display: table-cell;
   vertical-align: middle;
   font-family: $sans-serif;
-   color: white;
+   color:blue;
   z-index: 10;
   position: relative;
   cursor: pointer;
