--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -9,8 +9,8 @@
 .sidebar {
   -webkit-transform: translate3d(0, 0 , 0);
           transform: translate3d(0, 0 , 0);
-   background-color: #333;
-   text-align: center; 
+   
+   
    
 
   @include clearfix();
@@ -116,13 +116,12 @@
 }
 .sidebar .author__name {
   font-family: $sans-serif;
-color: white;
   font-size: $type-size-5;
 }
 
 .author__bio {
   margin: 0;
-   color: white;
+   
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -135,7 +134,6 @@ color: white;
   display: table-cell;
   vertical-align: middle;
   font-family: $sans-serif;
-   color:blue;
   z-index: 10;
   position: relative;
   cursor: pointer;
@@ -227,7 +225,7 @@ color: white;
     padding-right: 5px;
     padding-top: 2px;
     padding-bottom: 2px;
-    color: white;
+    color: black;
     font-size: $type-size-5;
     text-decoration: none;
 
