--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -9,9 +9,6 @@
 .sidebar {
   -webkit-transform: translate3d(0, 0 , 0);
           transform: translate3d(0, 0 , 0);
-   
-   
-   
 
   @include clearfix();
   margin-bottom: 1em;
@@ -75,19 +72,25 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 250px;
-  height: 250px; /* Set the height to match the width for a square shape */
-  text-align: center; /* Center the circular image */
-  overflow: hidden;
-}
+  width: 36px;
+  // set width only, for non-square avatars
+  // height: 36px;
+
+  @include breakpoint($large) {
+    display: block;
+    width: auto;
+    height: auto;
+  }
 
   img {
-     max-width: 100%; /* Ensure the image doesn't exceed the container */
-     max-height: 100%; /* Ensure the image doesn't exceed the container */
-     width: auto; /* Allow the width to adjust based on the aspect ratio */
-     height: auto; /* Allow the height to adjust based on the aspect ratio */
-      object-fit: cover;
-     
+    max-width: 175px;
+    border-radius: 50%;
+
+    @include breakpoint($large) {
+      padding: 5px;
+      border: 1px solid $border-color;
+    }
+  }
 }
 
 .author__content {
@@ -96,7 +99,6 @@
   padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
-   padding-top: 30px
 
   @include breakpoint($large) {
     display: block;
@@ -121,7 +123,6 @@
 
 .author__bio {
   margin: 0;
-   
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -225,7 +226,7 @@
     padding-right: 5px;
     padding-top: 2px;
     padding-bottom: 2px;
-    color: black;
+    color: inherit;
     font-size: $type-size-5;
     text-decoration: none;
 
