--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -72,7 +72,8 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-
+   width: 200px;
+   height: 200px;
   
   
   
@@ -85,7 +86,7 @@
 
   img {
     max-width: 175px;
-    border-radius: 50%;
+   
 
     @include breakpoint($large) {
       padding: 5px;
